# argento

./: .dockerignore  .gitignore  .python-version  README.md  pyproject.toml
botlog/botapp/: admin.py  models.py
botlog/botapp/management/commands/: rag_init.py
botlog/botapp/management/commands/utils/: rag_utils.py
botlog/botapp/migrations/: 0002_conrextragmodel.py  0003_fileuploadmodel_and_more.py
